--- a/app/src/main/res/layout/activity_cocktail.xml
+++ b/app/src/main/res/layout/activity_cocktail.xml
@@ -1,47 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/editText"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".CocktailActivity">
 
-    <TextView
-        android:id="@+id/enterName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enter the name of a cocktail:"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
 
-    <EditText
-        android:id="@+id/cocktailSearch"
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_text"
-        android:inputType="textWebEditText"
-        app:layout_constraintTop_toBottomOf="@+id/enterName"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        android:layout_weight="1"
+        android:transcriptMode="alwaysScroll" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_gravity="bottom">
+
     <Button
         android:id="@+id/search_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/enter_button"
-        app:layout_constraintTop_toBottomOf="@+id/cocktailSearch"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        android:text="@string/enter_button" />
 
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/cocktailSearch"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="134dp"
-        android:layout_marginBottom="437dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_button" />
+        android:layout_weight="3"
+        android:hint="@string/hint_text"
+        android:inputType="textWebEditText" />
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
