--- a/app/src/main/res/layout/activity_empty.xml
+++ b/app/src/main/res/layout/activity_empty.xml
@@ -1,9 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/white"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragmentLocation"
-    android:layout_alignRight="@+id/theList"
-    android:layout_height="match_parent"
-    android:layout_toRightOf="@id/theList"
     android:layout_width="match_parent"
-
-    />
+    android:layout_height="match_parent"
+    tools:context=".EmptyActivity">
+</FrameLayout>
