--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -10,17 +10,23 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
             <ImageView
-                android:id="@+id/thumbnail"
-                android:layout_gravity="fill_horizontal"
+                android:id="@+id/picture"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/thumbnail" />
+
             <TextView
                 android:id="@+id/instructions"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="instruction" />
+                android:layout_height="wrap_content"/>
 
             <TextView
             android:id="@+id/ingredient1"
@@ -30,18 +36,18 @@
             <TextView
                 android:id="@+id/ingredient2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="ingredients" />
+                android:layout_height="wrap_content" />
+
             <TextView
                 android:id="@+id/ingredient3"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="ingredients" />
+                android:layout_height="wrap_content" />
 
             <Button
                 android:id="@+id/hide"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="Hide"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"/>
 
