--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -50,6 +50,13 @@
                 android:text="Hide"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"/>
+            <Button
+                android:id="@+id/saveDrink"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp" />
 
         </LinearLayout>
 
