GUI looks professional. Full toolbar functionality with toast messages and alert dialog boxes with instructions for the user. Removed hide button from fragment because its not needed.

--- a/app/src/main/res/layout/activity_cocktail_item.xml
+++ b/app/src/main/res/layout/activity_cocktail_item.xml
@@ -8,8 +8,8 @@
         android:id="@+id/search_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/cocktail"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="10dp"
         app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
