--- a/app/src/main/res/layout/activity_cocktail.xml
+++ b/app/src/main/res/layout/activity_cocktail.xml
@@ -6,18 +6,24 @@
     android:orientation="vertical"
     tools:context=".CocktailActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/my_toolbarCocktail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/teal_200"
+        android:gravity="top"/>
 
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:transcriptMode="alwaysScroll" />
+        android:transcriptMode="alwaysScroll"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:layout_gravity="bottom">
+        android:gravity="bottom">
 
     <Button
         android:id="@+id/search_button"
