--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -9,6 +9,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
             <TextView
@@ -42,14 +45,6 @@
                 android:id="@+id/ingredient3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-
-            <Button
-                android:id="@+id/hide"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Hide"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"/>
 
         </LinearLayout>
 
