Saves fragment data into the Database successfully. Now adding a favourite section

--- a/app/src/main/res/layout/activity_favourite_cocktails.xml
+++ b/app/src/main/res/layout/activity_favourite_cocktails.xml
@@ -7,4 +7,9 @@
     android:id="@+id/favourite_cocktails"
     tools:context=".FavouriteCocktails">
 
+    <ListView
+        android:id="@+id/favListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </FrameLayout>
