--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -58,6 +58,14 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp" />
 
+            <Button
+                android:id="@+id/goToFav"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Go To Favourites"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp" />
+
         </LinearLayout>
 
 </FrameLayout>
