Fixed minor string error.

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -66,6 +66,29 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp" />
 
+            <Button
+                android:id="@+id/hide"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/hide"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"/>
+            <Button
+                android:id="@+id/saveDrink"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/savedrink"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp" />
+
+            <Button
+                android:id="@+id/goToFav"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/fav"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp" />
+
         </LinearLayout>
 
 </FrameLayout>
