--- a/app/src/main/res/layout/activity_cocktail_item.xml
+++ b/app/src/main/res/layout/activity_cocktail_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <TextView
         android:id="@+id/search_result"
         android:layout_width="wrap_content"
@@ -11,5 +12,13 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginLeft="10dp"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <ImageView
+        android:id="@+id/image_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/search_result"
+        app:layout_constraintStart_toStartOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
